# gameboy-emulator

./: .gitignore  .gitmodules  .ocamlformat  LICENSE  dune-project  gameboy.opam
lib/: addressable_intf.ml  bus.ml  bus.mli  cartridge.ml  cartridge.mli  cartridge_header.ml  cpu.ml  cpu.mli  dune  instruction.ml  instruction.mli  instruction_fetcher.ml  instruction_fetcher.mli  instruction_info.ml  interrupt_manager.ml  interrupt_manager.mli  joypad.ml  joypad.mli  ram.ml  ram.mli  registers.ml  registers.mli  timer.ml  timer.mli  uint.ml
lib/cartridges/: cartridge_intf.ml  mbc1.ml  mbc3.ml  rom_only.ml
lib/ppu/: color.ml  color_id.ml  lcd.ml  lcd.mli  oam.ml  oam.mli  palette.ml  palette.mli  ppu.ml  ppu.mli  tile_data.ml  tile_data.mli  tile_map.ml  tile_map.mli
roms/: cavern.hex  dmg_boot.hex
test/: dune
test/rom_test/: dune  test_acid2.ml  test_bootrom.ml
test/unit_test/: dune  mock_memory.ml  mock_memory.mli  test_cpu.ml  test_insruction_fetcher.ml  test_joypad.ml  test_lcd.ml  test_oam.ml  test_palette.ml  test_registers.ml  test_tile_data.ml  test_tile_map.ml  test_timer.ml
